Ensure that our width on smaller mobile devices does not get overriden.

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -55,7 +55,7 @@ header a {
 	}
 
 	main {
-		min-width: 90vw;
+		width: 90vw !important;
 	}
 
 	main section.content {
